--- a/templates/products/show.html
+++ b/templates/products/show.html
@@ -28,9 +28,9 @@
   <div class="col-sm-8">
     <h1>
       {{ product.title }}
-      <button href="#" class="pull-right btn btn-primary">
+      <a href="{% url 'update_cart' slug=product.slug %}" class="pull-right btn btn-primary">
         Add to Cart
-      </button>
+      </a>
     </h1>
     <hr>
     Price: {{ product.price }}
