--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Project name</a>
+      <a class="navbar-brand" href="{% url 'home' %}">Ecommerce</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <form class="navbar-form navbar-left" role="search" action="/s/">
@@ -18,9 +18,17 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="../navbar/">Default</a></li>
-        <li class="active"><a href="./">Static top <span class="sr-only">(current)</span></a></li>
-        <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+        <li><a href="{% url 'products:index' %}">Products</a></li>
+        <li>
+          <a href="{% url 'cart' %}">
+            Cart <span class="badge">{% if not request.session.items_total %}0{% else %}{{ request.session.items_total }}{% endif %}</span>
+          </a>
+        </li>
+        {% if user.is_authenticated %}
+        <li>
+          <a href="#">Account</a>
+        </li>
+        {% endif %}
       </ul>
     </div><!--/.nav-collapse -->
   </div>
